--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["lua", "serde"]
 license = "MIT"
 
 [dependencies]
-rlua  = { version = "0.19", default-features = false}
+rlua  = { version = "0.19" }
 serde = "1.0"
 
 [dev-dependencies]
